--- a/ChickenSlotsiOS/Packages/manifest.json
+++ b/ChickenSlotsiOS/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.coffee.softmask-for-ugui": "https://github.com/mob-sakai/SoftMaskForUGUI.git",
     "com.google.external-dependency-manager": "file:../Assets/GooglePackages/com.google.external-dependency-manager-1.2.177.tgz",
     "com.google.firebase.app": "file:../Assets/GooglePackages/com.google.firebase.app-12.0.0.tgz",
     "com.google.firebase.auth": "file:../Assets/GooglePackages/com.google.firebase.auth-12.0.0.tgz",
